--- a/templates/nrpe.cfg
+++ b/templates/nrpe.cfg
@@ -94,7 +94,7 @@ allowed_hosts=<%= allowed_hosts_string %>
 #
 # Values: 0=do not allow arguments, 1=allow command arguments
 
-dont_blame_nrpe=0
+dont_blame_nrpe=<%= dont_blame_nrpe %>
 
 
 
@@ -198,11 +198,11 @@ connection_timeout=300
 
 # The following examples use hardcoded command arguments...
 
-command[check_users]=/usr/lib/nagios/plugins/check_users -w 5 -c 10
-command[check_load]=/usr/lib/nagios/plugins/check_load -w 15,10,5 -c 30,25,20
-command[check_hda1]=/usr/lib/nagios/plugins/check_disk -w 20% -c 10% -p /dev/hda1
-command[check_zombie_procs]=/usr/lib/nagios/plugins/check_procs -w 5 -c 10 -s Z
-command[check_total_procs]=/usr/lib/nagios/plugins/check_procs -w 150 -c 200 
+#command[check_users]=/usr/lib/nagios/plugins/check_users -w 5 -c 10
+#command[check_load]=/usr/lib/nagios/plugins/check_load -w 15,10,5 -c 30,25,20
+#command[check_hda1]=/usr/lib/nagios/plugins/check_disk -w 20% -c 10% -p /dev/hda1
+#command[check_zombie_procs]=/usr/lib/nagios/plugins/check_procs -w 5 -c 10 -s Z
+#command[check_total_procs]=/usr/lib/nagios/plugins/check_procs -w 150 -c 200 
 
 
 # The following examples allow user-supplied arguments and can
@@ -216,13 +216,12 @@ command[check_total_procs]=/usr/lib/nagios/plugins/check_procs -w 150 -c 200
 #command[check_disk]=/usr/lib/nagios/plugins/check_disk -w $ARG1$ -c $ARG2$ -p $ARG3$
 #command[check_procs]=/usr/lib/nagios/plugins/check_procs -w $ARG1$ -c $ARG2$ -s $ARG3$
 
-#
+include_dir=<%= nrpe_config_dir %>/
+
+<% if osfamily == "Debian" %>
 # local configuration:
 #	if you'd prefer, you can instead place directives here
 include=/etc/nagios/nrpe_local.cfg
 
-# 
-# you can place your config snipplets into nrpe.d/
-# only snipplets ending in .cfg will get included
-include_dir=/etc/nagios/nrpe.d/
-
+include_dir=/etc/nagios-plugins/config/
+<% end %>
